--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-3-starter</artifactId>
+            <version>1.2.20</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
