--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.wfh.drawio</groupId>
     <artifactId>drawio-backend</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0-PORD</version>
     <name>drawio-backend</name>
     <description>drawio-backend</description>
     <url/>
